syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.devxijn.grpc_service.entity";
option java_outer_classname = "HelloWorldProto";
service Simple {
  rpc SayHello (HelloRequest) returns (HelloReply){

  }
  rpc StreamHello(HelloRequest) returns(stream HelloReply){}
}

message HelloRequest {
  string name = 1;
}

message HelloReply{
  string name = 1;
}